[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/Upgrade/UpgradeScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Upgrade/MapView.gd" type="Script" id=2]
[ext_resource path="res://Assets/textures/grid/simpleGrid.png" type="Texture" id=3]

[sub_resource type="NoiseTexture" id=1]
width = 142

[sub_resource type="NoiseTexture" id=2]
width = 256
height = 256

[sub_resource type="Animation" id=3]
resource_name = "FirstBoot"
tracks/0/type = "value"
tracks/0/path = NodePath("../Main/Upgrade/HBoxContainer/MapView:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -500, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Main/Upgrade/HBoxContainer/VBoxContainer:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -91.0, 0.0 ]
}

[node name="UpgradeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="TabContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade" type="MarginContainer" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Main/Upgrade"]
margin_right = 1080.0
margin_bottom = 564.0
rect_min_size = Vector2( 900, 500 )

[node name="MapView" type="VBoxContainer" parent="Main/Upgrade/HBoxContainer"]
margin_right = 600.0
margin_bottom = 564.0
rect_min_size = Vector2( 600, 0 )
script = ExtResource( 2 )

[node name="MapLabel" type="Label" parent="Main/Upgrade/HBoxContainer/MapView"]
margin_right = 600.0
margin_bottom = 14.0
rect_min_size = Vector2( 500, 0 )
text = "Upgrademap"

[node name="Panel" type="Panel" parent="Main/Upgrade/HBoxContainer/MapView"]
margin_top = 18.0
margin_right = 600.0
margin_bottom = 518.0
rect_min_size = Vector2( 500, 500 )
rect_clip_content = true

[node name="Helper" type="Control" parent="Main/Upgrade/HBoxContainer/MapView/Panel"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Main/Upgrade/HBoxContainer/MapView/Panel/Helper"]
self_modulate = Color( 0.380392, 0.380392, 0.380392, 1 )
margin_right = 1020.0
margin_bottom = 512.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Main/Upgrade/HBoxContainer/MapView/Panel/Helper"]
margin_left = 327.0
margin_top = 211.0
margin_right = 373.0
margin_bottom = 231.0
text = "Hello"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HScrollBar" type="HScrollBar" parent="Main/Upgrade/HBoxContainer/MapView"]
margin_top = 522.0
margin_right = 600.0
margin_bottom = 534.0
mouse_default_cursor_shape = 15

[node name="Filler" type="TextureRect" parent="Main/Upgrade/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 604.0
margin_right = 746.0
margin_bottom = 564.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Upgrade/HBoxContainer"]
margin_left = 750.0
margin_right = 1022.0
margin_bottom = 564.0
rect_min_size = Vector2( 272, 0 )

[node name="Label" type="Label" parent="Main/Upgrade/HBoxContainer/VBoxContainer"]
margin_right = 272.0
margin_bottom = 14.0
text = "Chutulai"

[node name="TextureRect" type="TextureRect" parent="Main/Upgrade/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 272.0
margin_bottom = 274.0
texture = SubResource( 2 )

[node name="Attac" type="Tabs" parent="Main"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Animations" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Transitions" type="AnimationPlayer" parent="Animations"]
playback_speed = 2.0
anims/FirstBoot = SubResource( 3 )
[connection signal="mouse_entered" from="Main/Upgrade/HBoxContainer/MapView/Panel" to="Main/Upgrade/HBoxContainer/MapView" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Main/Upgrade/HBoxContainer/MapView/Panel" to="Main/Upgrade/HBoxContainer/MapView" method="_on_Panel_mouse_exited"]
[connection signal="mouse_entered" from="Main/Upgrade/HBoxContainer/MapView/Panel/Helper/TextureRect" to="Main/Upgrade/HBoxContainer/MapView" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="Main/Upgrade/HBoxContainer/MapView/Panel/Helper/TextureRect" to="Main/Upgrade/HBoxContainer/MapView" method="_on_TextureRect_mouse_exited"]
